<?xml version="1.0" encoding="utf-8"?>
<!--

Copyright (c) 2013, Sebastian J. Mielke
All rights reserved.

Redistribution and use in source and binary forms, with or without modification,
are permitted provided that the following conditions are met:

  * Redistributions of source code must retain the above copyright notice, this
    list of conditions and the following disclaimer.
  * Redistributions in binary form must reproduce the above copyright notice,
    this list of conditions and the following disclaimer in the documentation
    and/or other materials provided with the distribution.
  * The names of its contributors may not be used to endorse or promote products
    derived from this software without specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED 
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

-->
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:padding="15dp"
  android:gravity="center"
  >
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    >
    <TextView
      android:id="@+id/lbWelcome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/welcome"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:textSize="30sp"
      android:gravity="center"
      />
    <TextView
      android:id="@+id/lbAbout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="5dp"
      android:text="@string/about"
      android:textAppearance="?android:attr/textAppearanceSmall"
      android:gravity="center"
      />
  </LinearLayout>

  <TextView
    android:id="@+id/lbHint"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/hint"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:gravity="center"
    />
  <EditText
    android:id="@+id/edInput"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="25dp"
    android:hint="@string/input"
    />
  <!--########## Depending on Method: ##########-->
  <SeekBar
    android:id="@+id/sbShift"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:max="25"
    />
  <EditText
    android:id="@+id/edKey"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/key"
    android:inputType="text|textNoSuggestions|textCapCharacters|textVisiblePassword"
    />
  <!--########## Depending on Method END ##########-->
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    >
    <ToggleButton
      android:id="@+id/tgMethod"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textOff="@string/caesar"
      android:textOn="@string/vigenere"
      />
    <ToggleButton
      android:id="@+id/tgMode"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      />
  </LinearLayout>
  <EditText
    android:id="@+id/edOutput"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:hint="@string/output"
    />
</LinearLayout>
</ScrollView>
